--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,11 @@
 /src/components/ArtworkDetails.js
 /src/components/Artworks.js
 /src/components/Auction.js
+REFERENCES.md
+README.md
+REFLECTIONS.md
+CRA_DOCS.md
+images
 
 /.pnp
 .pnp.js
