more ignore files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 /src/components/ArtworkDetails.js
 /src/components/Artworks.js
 /src/components/Auction.js
+ASSESSMENT.md
 REFERENCES.md
 README.md
 REFLECTIONS.md
